--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -5,12 +5,12 @@ body {
 .notificationbar {
   position: absolute;
   background: #ffd800;
-  height: 1cm;
+  height: 2em;
   width: 100%;
   text-align: center;
   vertical-align: middle;
   display: inline-block;
-  padding-top: 0.5cm;
+  padding-top: 0.5em;
   padding-bottom: auto;
   visibility: hidden;
 }
