--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -7,12 +7,12 @@ body {
 .notificationbar {
     position: absolute;
     background: $color_notification;
-    height: 1cm;
+    height: 2em;
     width: 100%;
     text-align: center;
     vertical-align: middle;
     display: inline-block;
-    padding-top: 0.5cm;
+    padding-top: 0.5em;
     padding-bottom: auto;
     visibility: hidden;
 }
