Fixed broken webpage switching, fixed wabpage expansion bug when elements are placed "behind" the camera and fixed the text blocking view rotation bug.

--- a/frontend/sass/3DView.scss
+++ b/frontend/sass/3DView.scss
@@ -1,5 +1,6 @@
 body {
     margin: 0%;
+    overflow: hidden;
 }
 
 #output {
@@ -9,4 +10,5 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
+    overflow: hidden;
 }
