--- a/frontend/css/3DView.css
+++ b/frontend/css/3DView.css
@@ -1,5 +1,6 @@
 body {
   margin: 0%;
+  overflow: hidden;
 }
 
 #output {
@@ -9,6 +10,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 1;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=3DView.css.map */
