--- a/frontend/sass/3DView.scss
+++ b/frontend/sass/3DView.scss
@@ -12,3 +12,34 @@ body {
     z-index: 1;
     overflow: hidden;
 }
+
+// Reference for the loader css code:  https://www.w3schools.com/howto/howto_css_loader.asp
+#loader {
+    border: 0.1em solid #f3f3f3;
+    
+    border-top-color: rgb(243, 243, 243);
+    border-top-style: solid;
+    border-top-width: 0.1em;
+    border-radius: 50%;
+    border-top: 0.1em solid #3498db;
+    width: 5em;
+    height: 5em;
+    top: 45%;
+    left: 45%;
+    position: fixed;
+    display: block;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    z-index: 9999;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
