--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -66,3 +66,57 @@ border: 0.1em solid #f3f3f3;
   100% { transform: rotate(360deg); }
 }
 
+/* SMALL GRID */
+.container {
+    display: grid;
+    min-height: 100%;
+    margin: 5px auto 0px auto;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 80px repeat(3, auto) 50px;
+    grid-template-areas:
+        "header header header"
+        "header header header"
+        "main main main"
+        "main main main"
+        "footer footer footer";
+}
+
+
+/* MEDIUM GRID */
+@media (min-width: 480px) {
+    .container {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 80px 1fr 1fr 1fr 50px;
+        grid-template-areas:
+            "header header header"
+            "header header header"
+            "main  main main"
+            "main  main main"
+            "footer footer  footer";
+    }
+}
+
+/* BIG GRID */
+@media (min-width: 800px) {
+    .container {
+        grid-template-columns: 120px 1fr 120px;
+        grid-template-rows: 80px 1fr 1fr 1fr 50px;
+        grid-template-areas:
+            "header header header"
+            "header header header"
+            "main  main main"
+            "main  main main"
+            "footer footer footer";
+    }
+}
+
+
+* { 
+    margin: 0;
+    padding: 0;
+}
+
+header  { background-color: lightgreen;  grid-area: header;}
+main { background-color: orange; grid-area: main;  }
+footer { background-color: hotpink; grid-area: footer;}
