--- a/frontend/css/3DView.css
+++ b/frontend/css/3DView.css
@@ -13,6 +13,20 @@ body {
   overflow: hidden;
 }
 
+#statusDiv {
+  z-index: 2;
+  top: 45%;
+  left: 45%;
+  position: absolute;
+  width: 7em;
+}
+
+#status {
+  background: white;
+  color: black;
+  text-align: center;
+}
+
 #loader {
   border: 0.1em solid #f3f3f3;
   border-top-color: #f3f3f3;
@@ -22,13 +36,10 @@ body {
   border-top: 0.1em solid #3498db;
   width: 5em;
   height: 5em;
-  top: 45%;
-  left: 45%;
-  position: fixed;
-  display: block;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
   z-index: 9999;
+  margin: auto;
 }
 
 /* Safari */
