--- a/frontend/sass/3DView.scss
+++ b/frontend/sass/3DView.scss
@@ -13,10 +13,23 @@ body {
     overflow: hidden;
 }
 
+#statusDiv{
+    z-index: 2;
+    top: 45%;
+    left: 45%;
+    position: absolute;
+    width: 7em;
+}
+
+#status {
+    background: white;
+    color: black;
+    text-align: center;
+}
+
 // Reference for the loader css code:  https://www.w3schools.com/howto/howto_css_loader.asp
 #loader {
     border: 0.1em solid #f3f3f3;
-    
     border-top-color: rgb(243, 243, 243);
     border-top-style: solid;
     border-top-width: 0.1em;
@@ -24,13 +37,10 @@ body {
     border-top: 0.1em solid #3498db;
     width: 5em;
     height: 5em;
-    top: 45%;
-    left: 45%;
-    position: fixed;
-    display: block;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
     z-index: 9999;
+    margin: auto;
 }
 
 /* Safari */
