--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -1,5 +1,6 @@
 $color_notification: #ffd800;
-$color_background: #6adce8;
+$color_background_primary: #dfd8c5;
+$color_background_secondary: #f58025;
 
 .notificationbar {
     position: absolute;
@@ -15,22 +16,24 @@ $color_background: #6adce8;
 }
 
 .repoform {
-    position: relative;
+    position:relative;
     border-radius: 4px;
     padding: 0.2em 1em 0.2em 1em;
     border: 2px solid black;
-    background-color: mix($color_background, black, 65%);
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr repeat(4, auto) 1fr;
+    display: flex;
+    background-color: mix($color_background_primary, white, 65%);
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: auto;
     grid-template-areas:
         "guide input send";
     p{
         grid-area: guide;
+        width: 10%;
+        margin: auto;
         font-weight: bold;
         text-decoration: underline;
-        grid-area: text;
     }
-    input[type="uri"]{
+    input{
         grid-area: input;
         width: 100%;
     }
@@ -38,15 +41,7 @@ $color_background: #6adce8;
         float: right;
         grid-area: send;
     }
-}
-
-#reponame {
-    width: 25em;
-}
-
-#gitrepotitle {
-    margin: 0em;
-    display: inline;
+    box-shadow: 3px 5px #333;
 }
 
 // Reference for the loader css code:  https://www.w3schools.com/howto/howto_css_loader.asp
@@ -97,7 +92,7 @@ $color_background: #6adce8;
 
 
 /* MEDIUM GRID */
-@media (min-width: 700px) {
+@media (min-width: 1000px) {
     .container {
         grid-template-columns: auto auto;
         grid-template-rows: auto auto auto auto;
@@ -132,14 +127,15 @@ $color_background: #6adce8;
 }
 
 body{
-    background-color: $color_background;
+    background-color: $color_background_primary;
     padding: 0em 1em 0em 1em;
+    background: linear-gradient(135deg, white, white 40em, $color_background_primary 10em, $color_background_secondary 120em);
 }
 
 header{ 
     grid-area: header;
-    background-color: mix($color_background, black, 65%);
-    box-shadow: 0 0 50px #333;
+    background-color: mix($color_background_primary, white, 65%);
+    box-shadow: 3px 5px #333;
     padding: 1em;
     border: 1px solid black;
 }
@@ -172,8 +168,8 @@ table{
     padding: 0px;
     font-weight: bold;
     border-spacing: 1em;
-    background-color: mix($color_background, black, 65%);
-    box-shadow: 0 0 50px #333;
+    background-color: mix($color_background_primary, white, 65%);
+    box-shadow: 3px 5px #333;
 
     th{
         border-bottom: 1px solid black;
